--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ button{
 }
 
 .filter-button{
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
@@ -86,6 +87,7 @@ button{
 }
 
 .main-button{
+    font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.9;
@@ -93,6 +95,11 @@ button{
 
     color: var(--primary-white-color);
     background-color: var(--accent-color);
+}
+
+.main-button:hover,
+.main-button:focus{
+    background-color: #188CE8;
 }
 
 .about{
